--- a/MyMeetingPlaces/res/values/strings.xml
+++ b/MyMeetingPlaces/res/values/strings.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="latitude">Latitude : </string>
-    <string name="longitude">Longitude : </string>
-    <string name="date">Date : </string>
-    <string name="time">Time : </string>
-    <string name="meetingPlace">Meeting Place</string> 
-    <string name="distence">Distence</string>  
+    <string name="latitude">Lat</string>
+    <string name="longitude">Long</string>
+    <string name="date">Date</string>
+    <string name="time">Time</string>
+    <string name="meetingPlace">Meeting Place</string>
+    <string name="distence">Distence</string>
     <string name="currentLocation">My current Location</string>
-    <string name="btnHome">HOME</string>       
-    
+    <string name="count">Count Places</string>
+    <string name="btnHome">HOME</string>
     <string name="load">Hello world!</string>
+    <string name="add">Register</string>
+    <string name="back">Back</string>
+    <string name="edit">Edit</string>
     <string name="btnReg">Register</string>
     <string name="btnRet">View Places</string>
     <string name="btnTakePhoto">Take Photo</string>
     <string name="btnSave">Save</string>
-    <string name="editRemarks">Enter Remarks</string>
-    
+    <string name="editRemarks">Places</string>
+    <string name="editContactName">Contact Name</string>
+    <string name="editContactEmail">Contact Email</string>
+    <string name="editContactMobile">Contact Mobile</string>
     <string name="app_name">My Meeting Places</string>
     <string name="action_settings">Settings</string>
-    
     <string name="title_activity_home">My Meeting Places</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_take_photo">My Meeting Places</string>
     <string name="title_activity_view_places_list">My Meeting Places</string>
+    <string name="title_activity_view_single_profile">My Meeting Places</string>
+    <string name="title_activity_update_profile">My Meeting Places</string>
 
 </resources>
